[gd_scene load_steps=5 format=3 uid="uid://bb3jyr034ur6f"]

[ext_resource type="Script" path="res://scripts/RollLineContainer.gd" id="1_hyniu"]
[ext_resource type="Texture2D" uid="uid://d26bwooincvuc" path="res://icons/background.png" id="2_aux3w"]
[ext_resource type="Script" path="res://scripts/AutoScale_NinePatchRect.gd" id="3_ob84w"]

[sub_resource type="Theme" id="Theme_ubllc"]
default_font_size = 26

[node name="RollLineContainer" type="BoxContainer"]
offset_right = 386.0
offset_bottom = 40.0
vertical = true
script = ExtResource("1_hyniu")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="DiceCountInput" type="SpinBox" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(84, 40)
layout_mode = 2
min_value = -1.0
value = 1.0

[node name="DiceCountLabel" type="Label" parent="HBoxContainer"]
self_modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(84, 40)
layout_mode = 2
theme = SubResource("Theme_ubllc")
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NinePatchRect2" type="NinePatchRect" parent="HBoxContainer/DiceCountLabel"]
show_behind_parent = true
layout_mode = 2
offset_left = -1.0
offset_top = -1.0
offset_right = 83.0
offset_bottom = 39.0
texture = ExtResource("2_aux3w")
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
script = ExtResource("3_ob84w")

[node name="dLabel" type="Label" parent="HBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme = SubResource("Theme_ubllc")
text = "d"

[node name="DiceSizeInput" type="SpinBox" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(84, 0)
layout_mode = 2
value = 8.0

[node name="DiceSizeLabel" type="Label" parent="HBoxContainer"]
self_modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(84, 40)
layout_mode = 2
theme = SubResource("Theme_ubllc")
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NinePatchRect2" type="NinePatchRect" parent="HBoxContainer/DiceSizeLabel"]
show_behind_parent = true
layout_mode = 2
offset_left = -1.0
offset_top = -1.0
offset_right = 83.0
offset_bottom = 39.0
texture = ExtResource("2_aux3w")
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
script = ExtResource("3_ob84w")

[node name="PlusLabel" type="Label" parent="HBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme = SubResource("Theme_ubllc")
text = "+"

[node name="ModInput" type="SpinBox" parent="HBoxContainer"]
visible = false
custom_minimum_size = Vector2(84, 0)
layout_mode = 2

[node name="ModLabel" type="Label" parent="HBoxContainer"]
self_modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(84, 40)
layout_mode = 2
theme = SubResource("Theme_ubllc")
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NinePatchRect2" type="NinePatchRect" parent="HBoxContainer/ModLabel"]
show_behind_parent = true
layout_mode = 2
offset_left = -1.0
offset_top = -1.0
offset_right = 83.0
offset_bottom = 39.0
texture = ExtResource("2_aux3w")
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
script = ExtResource("3_ob84w")

[node name="EqualLabel" type="Label" parent="HBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme = SubResource("Theme_ubllc")
text = "="

[node name="ValueLabel" type="Label" parent="HBoxContainer"]
self_modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(64, 40)
layout_mode = 2
theme = SubResource("Theme_ubllc")
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NinePatchRect2" type="NinePatchRect" parent="HBoxContainer/ValueLabel"]
show_behind_parent = true
layout_mode = 2
offset_left = -1.0
offset_top = -1.0
offset_right = 63.0
offset_bottom = 39.0
texture = ExtResource("2_aux3w")
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
script = ExtResource("3_ob84w")

[node name="DetailLineEdit" type="LineEdit" parent="."]
visible = false
layout_mode = 2
editable = false
